Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1458

lustre-rsync-test test_2b: old lustre_rsync does not work with new llog_changelog_ext_rec remove changelog

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.4.0, Lustre 2.6.0
    • Lustre 2.3.0, Lustre 2.1.2, Lustre 2.4.1, Lustre 2.5.0, Lustre 2.5.1
    • 3
    • 4107

      This issue was created by maloo for yujian <yujian@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/eb3d7ed4-ab13-11e1-8e7f-52540035b04c.

      The sub-test test_2b failed with the following error:

      Only in /mnt/lustre/d0.lustre-rsync-test/d2/clients/client1/~dmtmp/PM: PMD394.TMP
      lustre-rsync-test test_2b: @@@@@@ FAIL: Failure in replication; differences found.
      test failed to respond and timed out

      Info required for matching: lustre-rsync-test 2b

            bobijam Zhenyu Xu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved: