lustre/utils/lustre_rsync.c
@@ -194,6 +194,8 @@ char rsync[PATH_MAX];
 char rsync_ver[PATH_MAX];
 struct lr_parent_child_list *parents;
 
+FILE *debug_log;
+
 /* Command line options */
 struct option long_opts[] = {
         {"source",      required_argument, 0, 's'},
@@ -211,7 +213,8 @@ struct option long_opts[] = {
         {"start-recno", required_argument, 0, 'n'},
         {"abort-on-err",no_argument,       0, 'a'},
         {"debug",       required_argument, 0, 'd'},
-        {0, 0, 0, 0}
+	{"debuglog",	required_argument, 0, 'D'},
+	{0, 0, 0, 0}
 };
 
 /* Command line usage */
@@ -229,18 +232,31 @@ void lr_usage()
                 "\t--dry-run        don't write anything\n");
 }
 
+#define DEBUG_ENTRY(info)						       \
+	lr_debug(D_TRACE, "***** Start %lld %s (%d) %s %s %s *****\n",         \
+		 (info)->recno, changelog_type2str((info)->type),	       \
+		 (info)->type, (info)->tfid, (info)->pfid, (info)->name);
+
+#define DEBUG_EXIT(info, rc)						       \
+	lr_debug(D_TRACE, "##### End %lld %s (%d) %s %s %s rc=%d #####\n",     \
+		 (info)->recno, changelog_type2str((info)->type),	       \
+		 (info)->type, (info)->tfid, (info)->pfid, (info)->name, rc);
+
 /* Print debug information. This is controlled by the value of the
    global variable 'debug' */
 void lr_debug(int level, const char *fmt, ...)
 {
-        va_list ap;
+	va_list ap;
 
-        if (level > debug)
-                return;
+	if (level > debug)
+		return;
 
-        va_start(ap, fmt);
-        vprintf(fmt, ap);
-        va_end(ap);
+	va_start(ap, fmt);
+	if (debug_log != NULL)
+		vfprintf(debug_log, fmt, ap);
+	else
+		vfprintf(stdout, fmt, ap);
+	va_end(ap);
 }
 
 
@@ -805,7 +821,7 @@ int lr_create(struct lr_info *info)
                 if (rc1)
                         rc = rc1;
         }
-        return rc;
+	return rc;
 }
 
 /* Replicate a file remove (rmdir/unlink) operation */
@@ -846,7 +862,7 @@ int lr_remove(struct lr_info *info)
                         continue;
                 }
         }
-        return rc;
+	return rc;
 }
 
 /* Replicate a rename/move operation. This operations are tracked by
@@ -921,7 +937,7 @@ int lr_move(struct lr_info *info, struct lr_info *ext)
                 if (rc1)
                         rc = rc1;
         }
-        return rc;
+	return rc;
 }
 
 /* Replicate a hard link */
@@ -993,7 +1009,7 @@ int lr_link(struct lr_info *info)
                 if (rc1)
                         rc = rc1;
         }
-        return rc;
+	return rc;
 }
 
 /* Replicate file attributes */
@@ -1025,7 +1041,7 @@ int lr_setattr(struct lr_info *info)
                 if (rc1)
                         rc = rc1;
         }
-        return rc;
+	return rc;
 }
 
 /* Replicate xattrs */
@@ -1055,7 +1071,7 @@ int lr_setxattr(struct lr_info *info)
                         rc = rc1;
         }
 
-        return rc;
+	return rc;
 }
 
 /* Parse a line of changelog entry */
@@ -1425,6 +1441,8 @@ int lr_replicate()
                 if (dryrun)
                         continue;
 
+		DEBUG_ENTRY(info);
+
                 switch(info->type) {
                 case CL_CREATE:
                 case CL_MKDIR:
@@ -1458,6 +1476,7 @@ int lr_replicate()
                 default:
                         break;
                 }
+		DEBUG_EXIT(info, rc);
                 if (rc && rc != -ENOENT) {
                         lr_print_failure(info, rc);
                         errors++;
@@ -1504,8 +1523,8 @@ int main(int argc, char *argv[])
         if ((rc = lr_init_status()) != 0)
                 return rc;
 
-        while ((rc = getopt_long(argc, argv, "as:t:m:u:l:vx:zc:ry:n:d:",
-                                long_opts, NULL)) >= 0) {
+	while ((rc = getopt_long(argc, argv, "as:t:m:u:l:vx:zc:ry:n:d:D:",
+				 long_opts, NULL)) >= 0) {
                 switch (rc) {
                 case 'a':
                         /* Assume absolute paths */
@@ -1595,6 +1614,15 @@ int main(int argc, char *argv[])
                         if (debug < 0 || debug > 2)
                                 debug = 0;
                         break;
+		case 'D':
+			/* Undocumented option debug log file */
+			debug_log = fopen(optarg, "a");
+			if (debug_log == NULL) {
+				printf("Cannot open %s for debug log\n",
+				       optarg);
+				return -1;
+			}
+			break;
                 default:
                         fprintf(stderr, "error: %s: option '%s' "
                                 "unrecognized.\n", argv[0], argv[optind - 1]);
@@ -1641,5 +1669,7 @@ int main(int argc, char *argv[])
 
         rc = lr_replicate();
 
-        return rc;
+	if (debug_log != NULL)
+		fclose(debug_log);
+	return rc;
 }
